statping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statping
  template:
    metadata:
      labels:
        app: statping
    spec:
      containers:
        - name: statping
          image: statping/statping:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
