statping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statping
spec:
  selector:
    app: statping
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
